# Componentization

./: .gitignore  README.md  build.gradle  comm.gradle  config.gradle  gradle.properties  local.properties  settings.gradle
Plugin/: build.gradle
app/: .gitignore  CMakeLists.txt  build.gradle  tinker-support.gradle
app/libs/: huawei_en.json  old.json  test.json
app/src/androidTest/java/com/ancely/fyw/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/frameworks/base/cmds/app_process/: app_main.cpp
app/src/main/cpp/frameworks/base/core/jni/: AndroidRuntime.cpp  android_util_Binder.cpp
app/src/main/debug/res/layout/: activity_touch_event.xml  fragment_home.xml  item_test_adatper.xml
app/src/main/debug/res/values/: styles.xml
app/src/main/java/android/app/: ActivityManagerNative.java  IActivityManager.java
app/src/main/java/android/internal/os/: BinderInternal.java  ZygoteInit.java
app/src/main/java/android/os/: Binder.java  ServiceManagerNative.java
app/src/main/java/com/ancely/fyw/: ComApplication.java  FoodDemo.java  MainActivity.java  Test.java
app/src/main/java/com/android/server/: AMSRegister.java  SystemServer.java
app/src/main/java/java/util/: AMSRegister.java  MyHashMap.java  MyLinkedHashMap.java
app/src/main/res/layout/: activity_invoke.xml  activity_main.xml  activity_skin_test.xml  fragment_text.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/main/res/values-night/: colors.xml
app/src/test/java/com/ancely/fyw/: ExampleUnitTest.java
(+386 files in other folders)
